@startuml

title EasyGrading - Domain Model

class Student {
    firstname: String
    lastname: String
}

class Class {
    name: String
}

class Teacher {
    username: String
    email: String
    firstname: String
    lastname: String
}


Student "*" --* "1" Class
Teacher "1..*" -- "*" Class

class Performance {
    achievedPoints: int
    date: Date
}

class GradingScheme {
    name: String
}

class ActivityCategory {
    name : String
    weight: int
}

class Activity {
    name : String
    maxPoints : int
}

Class "*" -- "0..1" AssessmentScale

class AssessmentThreshold {
    name: String
    number: int
    startingPercentage: double
}


GradingScheme "1" -- "1..4" AssessmentThreshold
GradingScheme "1" -- "*" ActivityCategory

Student "1" -- "*" Performance
Performance "*" -- "1" Activity

ActivityCategory "1" o-- "*" Activity


@enduml